--- a/btree/Makefile
+++ b/btree/Makefile
@@ -2,6 +2,7 @@ CFLAGS=-I/usr/include/db1 -Wall -g -O0
 LDLIBS=-ldb-4.5
 TEST_OBJECTS=BDB_Set.o Btree_Set.o test.o
 
+all: test
 
 test: $(TEST_OBJECTS)
 	$(CC) $(LDFLAGS) -o "$@" $(TEST_OBJECTS) $(LDLIBS)
