Added hash-table backed set implementation.

--- a/sets/Makefile
+++ b/sets/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-I/usr/include/db1 -Wall -g -O0
 LDLIBS=-ldb-4.5
-TEST_OBJECTS=BDB_Set.o Btree_Set.o test.o
+TEST_OBJECTS=BDB_Set.o Btree_Set.o Hash_Set.o comparison.o hashing.o test.o
 
 all: test
 
