Updated proposal with some more figures and final changes.

--- a/proposal/Makefile
+++ b/proposal/Makefile
@@ -1,11 +1,13 @@
+FIGURES=memhier.eps
 
-proposal.dvi: proposal.tex proposal.bib
+proposal.dvi: proposal.tex proposal.bib $(FIGURES)
 	latex "$<"
 	bibtex "`basename "$<" .tex`".aux
 	latex "$<"
 	latex "$<"
 
 proposal.pdf: proposal.dvi
+	sh -c 'for f in $(FIGURES); do epstopdf "$$f"; done'
 	pdflatex proposal.tex
 
 proposal.rtf: proposal.dvi
@@ -15,7 +17,7 @@ clean:
 	rm -f proposal.{aux,log,bbl,blg}
 
 distclean: clean
-	rm -f proposal.{dvi,pdf}
+	rm -f proposal.dvi *.pdf
 
 .PHONY: all clean distclean 
 
