Moved option parsing code to a separate function so it is easier to reuse.

--- a/sets/Makefile
+++ b/sets/Makefile
@@ -1,14 +1,17 @@
 CFLAGS=-I/usr/include/db1 -Wall -g -O0
 LDLIBS=-ldb-4.5
-TEST_OBJECTS=BDB_Set.o Btree_Set.o Hash_Set.o comparison.o hashing.o test.o
+OBJECTS=Set.o BDB_Set.o Btree_Set.o Hash_Set.o comparison.o hashing.o
 
 all: test
 
-test: $(TEST_OBJECTS)
-	$(CC) $(LDFLAGS) -o "$@" $(TEST_OBJECTS) $(LDLIBS)
+test: $(OBJECTS) test.o
+	$(CC) $(LDFLAGS) -o "$@" $(OBJECTS) test.o $(LDLIBS)
 
 clean:
-	rm -f *.o
+	rm -f $(OBJECTS) test.o
+
+distclean: clean
+	rm -f test
 
 .PHONY: clean all
 
