Created deque testing application. Fixed some errors in deque implementations.

--- a/datastructures/Makefile
+++ b/datastructures/Makefile
@@ -3,19 +3,22 @@ LDLIBS=-ldb-4.5
 OBJECTS=FileStorage.o Set.o BDB_Set.o Btree_Set.o Hash_Set.o \
         Memory_Deque.o File_Deque.o comparison.o hashing.o
 
-all: test datastructures.a
+all: test-set test-deque datastructures.a
 
 datastructures.a: $(OBJECTS)
 	$(AR) rcs "$@" $(OBJECTS)
 
-test: datastructures.a
-	$(CC) $(LDFLAGS) -o "$@" test.c datastructures.a $(LDLIBS)
+test-set: datastructures.a test-set.c
+	$(CC) $(LDFLAGS) -o "$@" test-set.c datastructures.a $(LDLIBS)
+
+test-deque: datastructures.a test-deque.c
+	$(CC) $(LDFLAGS) -o "$@" test-deque.c datastructures.a $(LDLIBS)
 
 clean:
 	rm -f $(OBJECTS)
 
 distclean: clean
-	rm -f test datastructures.a
+	rm -f test-set datastructures.a
 
 .PHONY: all clean distclean
 
