Some more work on the Bender set implementation.

--- a/datastructures/Makefile
+++ b/datastructures/Makefile
@@ -3,7 +3,7 @@ LDLIBS=-ldb-4.5
 OBJECTS=FileStorage.o Set.o BDB_Set.o Btree_Set.o Hash_Set.o Bender_Set.o \
         Bender_Impl.o Memory_Deque.o File_Deque.o comparison.o hashing.o
 
-all: test-set test-deque datastructures.a
+all: test-set test-deque datastructures.a test
 
 datastructures.a: $(OBJECTS)
 	$(AR) rcs "$@" $(OBJECTS)
@@ -13,6 +13,9 @@ test-set: datastructures.a test-set.c
 
 test-deque: datastructures.a test-deque.c
 	$(CC) $(LDFLAGS) -o "$@" test-deque.c datastructures.a $(LDLIBS)
+
+test: datastructures.a test.c
+	$(CC) $(LDFLAGS) -o "$@" test.c datastructures.a $(LDLIBS)
 
 clean:
 	rm -f $(OBJECTS)
