Added Makefile for building model bytecode from PROMELA source.

--- a/search/models/Makefile
+++ b/search/models/Makefile
@@ -1,8 +1,18 @@
-all:
-	./build.sh src/*
+# Available models:
+# eratosthenes leader leader2 loops mobile1 peterson peterson_N pftp snoopy sort
+
+MODELS=eratosthenes.b leader.b leader2.b mobile1.b peterson.b peterson_N.b pftp.b snoopy.b sort.b
+
+
+%.b : src/%
+	./build.sh $^
+
+all: $(MODELS)
 
 clean:
 	rm -rf build
-	rm -f *.b
 
-.PHONY: all clean
+distclean:
+	for model in $(MODELS); do rm -f $${model}.b; done
+
+.PHONY: all clean distclean
