--- a/datastructures/Makefile
+++ b/datastructures/Makefile
@@ -1,8 +1,13 @@
 CFLAGS=-I/usr/include/db1 -Wall -Wextra -g -O2
-LDLIBS=-ldb-4.5
-OBJECTS=Alloc.o BDB_Set.o Bender_Set.o Bender_Impl.o Btree_Set.o Dummy_Set.o \
+
+LDLIBS=
+# removed: -ldb-4.5
+
+OBJECTS=Alloc.o Bender_Set.o Bender_Impl.o Btree_Set.o Dummy_Set.o \
         File_Deque.o FileStorage.o Hash_Set.o Memory_Deque.o Mock_Set.o Set.o \
 	comparison.o hashing.o
+# removed: BDB_Set.o
+
 
 all: test-set test-deque datastructures.a
 
