Added new plots.

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -2,7 +2,9 @@ PLOTS=fig-queuesize.eps \
       fig-eratosthenes_vss.eps fig-eratosthenes_wctime.eps \
       fig-eratosthenes-bender_vss.eps fig-eratosthenes-bender_wctime.eps \
       fig-eratosthenes-hash_vss.eps fig-eratosthenes-hash_wctime.eps \
-      fig-eratosthenes-btree_vss.eps fig-eratosthenes-btree_wctime.eps
+      fig-eratosthenes-btree_vss.eps fig-eratosthenes-btree_wctime.eps \
+      fig-leader2_vss.eps fig-leader2_wctime.eps \
+      fig-peterson_vss.eps fig-peterson_wctime.eps
 FIGURES=memhier.eps bender-set.eps $(PLOTS)
 
 all: paper.dvi
